Better geometric text stroke effect

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 <body>
     <div class="screen">
         <header>
-            <div class="header-title">
-            Local<br/>Forecast</div>
+            <div class="header-title">Local<br />Forecast</div>
             <img class="noaa-logo" src="noaa.png" />
         </header>
         <div class="timedate">10:54:36 AM<br/>&nbsp;MON NOV&nbsp;&nbsp;9</div>
