Notes and refactoring

--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
         </header>
         <div class="timedate">10:54:36 AM<br/>&nbsp;MON NOV&nbsp;&nbsp;9</div>
         <main>
-            test
+            Line 1<br />
+            Line 2<br />
+            Line 3<br />
+            Line 4<br />
+            Line 5<br />
+            Line 6<br />
+            Line 7
         </main>
         <footer>
             <div class="footer-marquee">
